bug fix letter spacing and iframe

--- a/css/src/global.scss
+++ b/css/src/global.scss
@@ -262,6 +262,9 @@ a.ArticleHeader-eyebrow {
 			padding: 10px 10px;
 		}
 	}
+	iframe {
+		max-width: 100%;
+	}
 }
 
 *,
